add getUser api
