# src/Routes/User/index.js
@@ -1,7 +1,7 @@
 const { Router } = require('express');
 const router = Router();
 const User = require('../../Controllers/User');
-
+router.get('/',User.getUsers);
 router.post('/addUser', User.addUser);
-router.post('/:id/addEmployee',User.addEmployee)
+router.post('/:id/addEmployee',User.addEmployee);
 module.exports = router;
